--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/main.css') }}" />
@@ -9,7 +11,17 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        {% block jumbotron %}{% endblock %}
+        <div class="container">
         {% block body %}{% endblock %}
+            <hr />
+        <footer>
+        {% block footer %}
+            <p><a href="{{ path('homepage') }}">Let's go home</a></p>
+            <p>&copy; 2016 Company, Inc.</p>
+        {% endblock %}
+        </footer>
+        </div> <!-- /container -->
         {% block javascripts %}{% endblock %}
     </body>
 </html>
