--- a/app/Resources/views/secret/oauth.html.twig
+++ b/app/Resources/views/secret/oauth.html.twig
@@ -3,7 +3,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1>This is secured by OAuth2</h1>
-            <h2>Good to see you, API user</h2>
+            <h2>Good to see you, <b>{{ app.user.username }}</b></h2>
         </div>
     </div>
 {% endblock %}
