added jwt auth + listener added fortune to jwt payload twig: display expiry times

--- a/app/Resources/views/secret/basic_auth.html.twig
+++ b/app/Resources/views/secret/basic_auth.html.twig
@@ -3,7 +3,7 @@
     <div class="jumbotron">
         <div class="container">
             <h1>This is secured by Basic Auth</h1>
-            <h2>Good to see you, <strong>{{ app.user.username }}</strong></h2>
+            <h2>Buona Sera, <strong>{{ app.user.username }}</strong></h2>
         </div>
     </div>
 {% endblock %}
