--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -21,15 +21,23 @@
                 <div class="input-group">
                     <input type="text" name="access_token" class="form-control" value="" placeholder="get an access token first" />
                     <span class="input-group-btn">
-                        <button class="btn btn-default" type="submit">Go!</button>
+                        <button class="btn btn-warning" type="submit">Go!</button>
                     </span>
                 </div>
             </form>
         </div>
         <div class="col-md-4">
             <h2>JWT</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-success" href="#" role="button">View details &raquo;</a></p>
+            {{ form(jwtForm) }}
+
+            <form method="GET" action="{{ path('secret_jwt') }}">
+                <div class="input-group">
+                    <input type="text" name="bearer" class="form-control" value="" placeholder="get a jwt first" />
+                    <span class="input-group-btn">
+                        <button class="btn btn-success" type="submit">Go!</button>
+                    </span>
+                </div>
+            </form>
         </div>
     </div>
 {% endblock %}
