--- a/app/Resources/views/secret/oauth.html.twig
+++ b/app/Resources/views/secret/oauth.html.twig
@@ -10,7 +10,17 @@
 {% block body %}
     <div class="row">
         <div class="col-xs-12">
-            <i class="glyphicon glyphicon-adjust"></i> This page is secret
+            <p>
+                Your OAuth token will expire in
+                {{ "%02d"|format(date(accessToken.expiresAt).diff(date()).i) }}
+                :
+                {{ "%02d"|format(date(accessToken.expiresAt).diff(date()).s) }} minutes.
+                ({{ date(accessToken.expiresAt)|date('d.m.Y H:i:s') }})
+            </p>
+            <h3>Your scopes are</h3>
+            <blockquote>
+                <p> {{ accessToken.scope }}</p>
+            </blockquote>
         </div>
     </div>
 {% endblock %}
